[metadata]
name = personnal_web_site
home-page = https://github.com/GuillaumeOj/Resume
summary = My personnal web site like a playground!
description-file = README.rst
author = GuillaumeOj
author-email = contact@ojardias.io
classifier =
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9


[options]
packages = resume

include_package_data = true

install_requires =
    fastapi[all]
    uvicorn[standard]


[build_wheel]
universal = 1


[mypy]
ignore_missing_imports = true
disallow_incomplete_defs = true
warn_unused_ignores = true
warn_unused_configs = true
disallow_any_generics = true
warn_return_any = true
files = resume 
disallow_subclassing_any = true
warn_redundant_casts = true
strict_equality = true
no_implicit_optional = true
disallow_untyped_decorators = true
